--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.10",
     "bootstrap": "^4.6.0",
     "json-server": "^0.16.3",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
